--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,16 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Latex
+*.aux
+*.bbl
+*.bcf
+*.log
+*.synctex.gz
+*.blg
+*.pdf
+
+# output
+drives/
+.ideas/
